[gd_scene load_steps=4 format=3 uid="uid://cwwgdf2ykqb7p"]

[ext_resource type="Script" path="res://Scenes/user settings screen/options_menu.gd" id="1_38k07"]
[ext_resource type="PackedScene" uid="uid://dlk6vicnk01c8" path="res://Scenes/user settings screen/settings_tab_container.tscn" id="2_cpye6"]

[sub_resource type="SystemFont" id="SystemFont_8ix8c"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38k07")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Options_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_8ix8c")
theme_override_font_sizes/font_size = 25
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings_tab_container" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_cpye6")]
layout_mode = 2
size_flags_vertical = 3

[node name="Back_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "BACK"

[connection signal="button_down" from="MarginContainer/VBoxContainer/Back_button" to="." method="_on_exit_button_button_down"]
